<resources>
    <string name="app_name">Popcorn</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort_by">Sort By</string>
    <string name="action_share">Share</string>
    <string name="trailers_label">Trailers</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="biography_subheading">Biography</string>
    <string name="birth_date">Birthday:</string>
    <string name="death_date">Death:</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="produced_by">Produced by</string>
    <string name="directed_by">Directed by</string>
    <string name="languages">Languages:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="production_studios">Prod. Studios:</string>
    <string name="search_hint">Search movie...</string>

    <!-- Button labels. -->

    <!-- String resources. -->
    <string name="rating_out_of_ten">%1$s/10</string>
    <string name="runtime">%1$s min</string>
    <string name="overview">Overview</string>
    <string name="share_intent_title">Share</string>

    <!-- Navigation labels. -->
    <string name="popular">Popular</string>
    <string name="top">Top</string>
    <string name="current">Current</string>
    <string name="favourites">Saved</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About Us</string>

    <!-- Dialog strings. -->
    <string name="dialog_title">Sort By</string>
    <string name="top_rated">Best</string>
    <string name="alphabetical_name">Name</string>
    <string name="longest_runtime">Runtime</string>
    <string name="newest_release">Newest</string>
    <string name="highest_revenue">Revenue</string>
    <string name="highest_profit">Profit</string>
    <string name="default_order">Default</string>

    <!-- Toolbar sort category. -->
    <string name="toolbar_sort_top">Rating\n(Best to Worst)</string>
    <string name="toolbar_sort_name">Title (A-Z)</string>
    <string name="toolbar_sort_length">Runtime\n(Long to Short)</string>
    <string name="toolbar_sort_newest">Release\n(New to Old)</string>
    <string name="toolbar_sort_revenue">Revenue\n(High to Low)</string>
    <string name="toolbar_sort_profit">Profit\n(High to Low)</string>
    <string name="toolbar_sort_default">Default</string>

</resources>
