<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"
        android:id="@+id/navigation_movie_categories">

        <item android:id="@+id/category_popular"
            android:title="@string/popular"
            android:icon="@mipmap/ic_popular"
            app:showAsAction="never" />

        <item android:id="@+id/category_top"
            android:title="@string/top"
            android:icon="@drawable/ic_top"
            app:showAsAction="never" />

        <item android:id="@+id/category_current"
            android:title="@string/current"
            android:icon="@drawable/ic_current"
            app:showAsAction="never" />

        <item android:id="@+id/category_favourites"
            android:title="@string/favourites"
            android:icon="@drawable/ic_saved"
            app:showAsAction="never" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/navigation_extra_options">

        <item android:id="@+id/action_settings"
            android:title="@string/action_settings" />

        <item android:id="@+id/action_feedback"
            android:title="@string/action_feedback" />

        <item android:id="@+id/action_about"
            android:title="@string/action_about" />

    </group>

</menu>